--- a/public/index.html
+++ b/public/index.html
@@ -21,156 +21,68 @@
 <body>
   <!-- header nav -->
   <header>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
-      <a class="navbar-brand" href="#"><strong>Site Name</strong></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menubar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+	  <nav class="navbar fixed-top navbar-expand-lg">
+		  <div class="container">
+			  <a class="navbar-brand" href="#"><strong>Site Name</strong></a>
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menubar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				  <span class="navbar-toggler-icon"></span>
+			  </button>
 
-      <div class="collapse navbar-collapse justify-content-between" id="menubar">
-        <form class="form-inline md-form form-sm">
-          <a href="#"><i class="fa fa-search white-text mr-3" aria-hidden="true"></i></a>
-          <input class="form-control form-control-sm" type="text" placeholder="Search Stock" aria-label="Search">
-        </form>
+			  <div class="collapse navbar-collapse justify-content-between" id="menubar">
+				  <form class="form-inline md-form form-sm">
+					  <a href="#"><i class="fa fa-search white-text mr-3" aria-hidden="true"></i></a>
+					  <input class="form-control form-control-sm" type="text" placeholder="Search Stock" aria-label="Search">
+				  </form>
 
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Trade Center</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">My Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+				  <ul class="navbar-nav">
+					  <li class="nav-item">
+						  <a class="nav-link" href="#">Home</a>
+					  </li>
+					  <li class="nav-item">
+						  <a class="nav-link" href="#">My Account</a>
+					  </li>
+					  <li class="nav-item">
+						  <a class="nav-link" href="#">Logout</a>
+					  </li>
+				  </ul>
+			  </div>
+		  </div>
+	  </nav>
+
+	  <!-- hero -->
+	  <div class="view">
+		  <div class="full-bg-img">
+			  <div class="mask rgba-black-strong flex-center">
+				  <div class="container">
+					  <h1 class="display-4 white-text">SITE NAME</h1>
+					  <p class="white-text">Lorem ipsum dolor sit amet, mandamus consequuntur pri at, augue tollit accommodare duo at. In posse semper quo.</p>
+					  <button type="button" name="signup" class="btn btn-indigo">Get Started!</button>
+				  </div>
+			  </div>
+		  </div>
+	  </div>
   </header>
 
-  <!-- table -->
-  <table class="table table-hover mt-5 text-center">
-    <thead>
-      <tr>
-        <th class="text-left">Symbol<br><span class="company">Company</span></th>
-        <th>QTY</th>
-        <th>Last Price $</th>
-        <th>Price Paid $</th>
-        <th>Market Value $</th>
-        <th>Total Gain $</th>
-        <th>Profit/Loss %</th>
-        <td>Action</td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td class="text-left">WFC<br><span class="company">Wells Fargo<span></td>
-          <td>10</td>
-          <td>0.00</td>
-          <td>0.00</td>
-          <td>0.00</td>
-          <td>0.00</td>
-          <td>%</td>
-          <td>
-            <a class="btn btn-indigo btn-custom-small" href="#0">Chart</a>
-            <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
-          </td>
-        </tr>
-        <tr>
-          <td class="text-left">NKE<br><span class="company">Nike Inc.<span></td>
-            <td>20</td>
-            <td>0.00</td>
-            <td>0.00</td>
-            <td>0.00</td>
-            <td>0.00</td>
-            <td>%</td>
-            <td>
-              <a class="btn btn-indigo btn-custom-small" href="#0">Chart</a>
-              <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
-            </td>
-        </tr>
-      </tbody>
-    </table>
+  <section id="about">
+	  <div class="container">
+	  	<div class="row">
+	  		<h3>About This App</h3>
+	  	</div>
+		<div class="row">
+			<p class="col-md-4">Practice stock investment: Lorem ipsum dolor sit amet, mandamus consequuntur pri at, augue tollit accommodare duo at.</p>
+			<p class="col-md-4">Update in realtime: Lorem ipsum dolor sit amet, mandamus consequuntur pri at, augue tollit accommodare duo at.</p>
+			<p class="col-md-4">Lorem ipsum dolor sit amet, mandamus consequuntur pri at, augue tollit accommodare duo at.</p>
+		</div>
+	  </div>
+  </section>
 
-    <!-- form -->
-    <form id="trade" class="mb-5">
-      <div class="form-row d-flex align-items-end">
-        <div class="col">
-          <label for="stock" class="company">Symbol</label>
-          <input type="text" class="form-control" name="stock" placeholder="Stock">
-        </div>
-        <div class="col">
-          <label for="price" class="company">Price $</label>
-          <input type="text" class="form-control" name="price" placeholder="Price $">
-        </div>
-        <div class="col">
-          <label for="action" class="company">Action</label>
-          <input type="text" class="form-control dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" name="action" placeholder="Buy/Sell">
-          <div class="dropdown-menu col">
-            <a class="dropdown-item" href="#">Buy</a>
-            <a class="dropdown-item" href="#">Sell</a>
-            <a class="dropdown-item" href="#">Something else</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
-          </div>
-        </div>
-        <div class="col">
-          <label for="qty" class="company">QTY</label>
-          <input type="text" class="form-control" name="qty" placeholder="QTY">
-        </div>
-        <div class="col">
-          <label for="total" class="company">Total</label>
-          <input type="text" class="form-control" name="total" placeholder="Total $">
-        </div>
-        <div class="col">
-          <a class="btn btn-indigo btn-custom-small" href="#0">Confirm</a>
-        </div>
-      </div>
-    </form>
-
-  <!-- chart -->
-  <div id="chart"></div>
-
-  <!-- portfolio -->
-  <div id="portfolio"></div>
-
-  <!-- suggested stocks -->
-  <div class="container text-center">
-    <div class="suggested">
-      <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
-      <p><span class="profit">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
-      <div>
-        <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
-        <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
-      </div>
-    </div>
-
-    <div class="suggested">
-      <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
-      <p><span class="profit">0.00%</span><i class="fa fa-arrow-circle-up"></i></p>
-      <div>
-        <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
-        <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
-      </div>
-    </div>
-    <div class="suggested">
-      <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
-      <p><span class="profit">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
-      <div>
-        <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
-        <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
-      </div>
-    </div>
-
-    <div class="suggested">
-      <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
-      <p><span class="profit">0.00%</span><i class="fa fa-arrow-circle-up"></i></p>
-      <div>
-        <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
-        <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
-      </div>
-    </div>
-  </div>
+  <section id="signup">
+	  <div class="container text-center">
+	  	<div class="card card-body" style="height:500px;width:60%;margin:50px auto">
+	  		<h3>Sign up module goes here</h3>
+	  	</div>
+	  </div>
+  </section>
 
   <!--footer-->
   <footer class="page-footer font-small pt-4 mt-4">
@@ -190,7 +102,7 @@
               <a href="#!">eCharts</a>
             </li>
             <li>
-              <a href="#!">Link 3</a>
+              <a href="#!">WebSocket</a>
             </li>
             <li>
               <a href="#!">Link 4</a>
