--- a/public/index.html
+++ b/public/index.html
@@ -48,44 +48,424 @@
 			  </div>
 		  </div>
 	  </nav>
+  </header>
 
-	  <!-- hero -->
-	  <div class="view">
-		  <div class="full-bg-img">
-			  <div class="mask rgba-black-strong flex-center">
-				  <div class="container">
-					  <h1 class="display-4 white-text">SITE NAME</h1>
-					  <p class="white-text">Lorem ipsum dolor sit amet, mandamus consequuntur pri at, augue tollit accommodare duo at. In posse semper quo.</p>
-					  <button type="button" name="signup" class="btn btn-indigo">Get Started!</button>
+<!-- user panel -->
+  <section id="user" class="white-text">
+	  <div class="container">
+		  <div class="row">
+			  <div class="col-6">
+				  <h3>My Account</h3>
+				  <p class="my-font-small">username@gmail.com</p>
+			  </div>
+			  <div class="col-3">
+			  	<p class="my-font-small">Total Amount</p>
+				<p>$52,312.17</p>
+			  </div>
+			  <div class="col-3">
+			  	<p class="my-font-small">Available Amount</p>
+				<p>$12,342.32</p>
+			  </div>
+		  </div>
+		  <div class="row tabs-wrapper mt-4">
+			  <ul class="nav classic-tabs text-center" role="tablist">
+				  <li class="nav-item">
+					  <a class="my-font-small nav-link waves-light active" data-toggle="tab" href="#panel-portfolio" role="tab"><i class="fa fa-user fa-2x" aria-hidden="true"></i><br>Portfolio</a>
+				  </li>
+				  <li class="nav-item">
+					  <a class="my-font-small nav-link waves-light" data-toggle="tab" href="#panel-market" role="tab"><i class="fa fa-heart fa-2x" aria-hidden="true"></i><br>Market</a>
+				  </li>
+				  <li class="nav-item">
+					  <a class="my-font-small nav-link waves-light" data-toggle="tab" href="#panel-history" role="tab"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i><br>History</a>
+				  </li>
+				  <li class="nav-item">
+					  <a class="my-font-small nav-link waves-light" data-toggle="tab" href="#panel-trade" role="tab"><i class="fa fa-star fa-2x" aria-hidden="true"></i><br>Trade</a>
+				  </li>
+				  <li class="nav-item">
+					  <a class="my-font-small nav-link waves-light" data-toggle="tab" href="#panel-search" role="tab"><i class="fa fa-search fa-2x" aria-hidden="true"></i><br>Search</a>
+				  </li>
+			  </ul>
+		  </div>
+	  </div>
+  </section>
+
+  <section id="content" class="container tab-content card">
+
+	  <!-- portfolio -->
+	  <div class="tab-pane fade in show active" id="panel-portfolio" role="tabpanel">
+		  <h3 class="mb-5">Portfolio</h3>
+		  <div class="row mb-5">
+			  <div id="chart" class="col-8"></div>
+    		  <div id="portfolio" class="col-4"></div>
+		  </div>
+		  <h3 class="mb-5">My Stocks</h3>
+		  <table class="table table-hover text-center">
+		    <thead>
+		      <tr>
+		        <th class="text-left">Symbol<br><span class="my-font-small">Company</span></th>
+		        <th>QTY</th>
+		        <th>Last Price $</th>
+		        <th>Price Paid $</th>
+		        <th>Market Value $</th>
+		        <th>Total Gain $</th>
+		        <th>Profit/Loss %</th>
+		        <th>Action</th>
+		      </tr>
+		    </thead>
+		    <tbody>
+		      <tr>
+		        <td class="text-left">WFC<br><span class="my-font-small">Wells Fargo<span></td>
+		          <td>10</td>
+		          <td>0.00</td>
+		          <td>0.00</td>
+		          <td>0.00</td>
+		          <td>0.00</td>
+		          <td>%</td>
+		          <td>
+		            <a class="btn btn-indigo btn-custom-small" href="#0">Chart</a>
+		            <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
+		          </td>
+		        </tr>
+		        <tr>
+		          <td class="text-left">NKE<br><span class="my-font-small">Nike Inc.<span></td>
+		            <td>20</td>
+		            <td>0.00</td>
+		            <td>0.00</td>
+		            <td>0.00</td>
+		            <td>0.00</td>
+		            <td>%</td>
+		            <td>
+		              <a class="btn btn-indigo btn-custom-small" href="#0">Chart</a>
+		              <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
+		            </td>
+		        </tr>
+		      </tbody>
+		    </table>
+	  </div>
+
+	  <!-- market -->
+	  <div class="tab-pane fade" id="panel-market" role="tabpanel">
+		  <h3 class="mb-5">Major Index</h3>
+		  <div class="row">
+			  <div id="chart-market" class="col-md-6"><p>Market diagram</p></div>
+			  <div class="col-md-6">
+				  <table class="table table-hover text-center">
+					  <thead>
+						  <tr>
+							  <th class="text-left"></th>
+							  <th>Last</th>
+							  <th>Change</th>
+							  <th>% CHG</th>
+						  </tr>
+					  </thead>
+					  <tbody>
+						  <tr>
+							  <td class="text-left">S&P 500</td>
+							  <td>0.00</td>
+							  <td>0.00</td>
+							  <td>0.00%</td>
+						  </tr>
+						  <tr>
+							  <td class="text-left">NASDAQ</td>
+							  <td>0.00</td>
+							  <td>0.00</td>
+							  <td>0.00%</td>
+						  </tr>
+						  <tr>
+							  <td class="text-left">DJIA</td>
+							  <td>0.00</td>
+							  <td>0.00</td>
+							  <td>0.00%</td>
+						  </tr>
+						  <tr>
+							  <td class="text-left">FTSE</td>
+							  <td>0.00</td>
+							  <td>0.00</td>
+							  <td>0.00%</td>
+						  </tr>
+						  <tr>
+							  <td class="text-left">NIKKEI</td>
+							  <td>0.00</td>
+							  <td>0.00</td>
+							  <td>0.00%</td>
+						  </tr>
+						  <tr>
+							  <td class="text-left">SHANGHAI</td>
+							  <td>0.00</td>
+							  <td>0.00</td>
+							  <td>0.00%</td>
+						  </tr>
+					  </tbody>
+				  </table>
+			  </div>
+		  </div>
+		  <div class="row mt-5">
+			  <div class="col-md-6">
+				  <h3>Currencies</h3>
+				  <table class="table table-hover text-center">
+					  <thead>
+						  <tr>
+							  <th class="text-left"></th>
+							  <th>Last</th>
+							  <th>Change</th>
+							  <th>% CHG</th>
+						  </tr>
+					  </thead>
+					  <tbody>
+						  <tr>
+							  <td class="text-left">S&P 500</td>
+							  <td>0.00</td>
+							  <td>0.00</td>
+							  <td>0.00%</td>
+						  </tr>
+						  <tr>
+							  <td class="text-left">NASDAQ</td>
+							  <td>0.00</td>
+							  <td>0.00</td>
+							  <td>0.00%</td>
+						  </tr>
+						  <tr>
+							  <td class="text-left">DJIA</td>
+							  <td>0.00</td>
+							  <td>0.00</td>
+							  <td>0.00%</td>
+						  </tr>
+						  <tr>
+							  <td class="text-left">FTSE</td>
+							  <td>0.00</td>
+							  <td>0.00</td>
+							  <td>0.00%</td>
+						  </tr>
+						  <tr>
+							  <td class="text-left">NIKKEI</td>
+							  <td>0.00</td>
+							  <td>0.00</td>
+							  <td>0.00%</td>
+						  </tr>
+						  <tr>
+							  <td class="text-left">SHANGHAI</td>
+							  <td>0.00</td>
+							  <td>0.00</td>
+							  <td>0.00%</td>
+						  </tr>
+					  </tbody>
+				  </table>
+			  </div>
+			  <div class="col-md-6">
+				  <h3>Commodities</h3>
+				  <table class="table table-hover text-center">
+					  <thead>
+						  <tr>
+							  <th class="text-left"></th>
+							  <th>Last</th>
+							  <th>Change</th>
+							  <th>% CHG</th>
+						  </tr>
+					  </thead>
+					  <tbody>
+						  <tr>
+							  <td class="text-left">S&P 500</td>
+							  <td>0.00</td>
+							  <td>0.00</td>
+							  <td>0.00%</td>
+						  </tr>
+						  <tr>
+							  <td class="text-left">NASDAQ</td>
+							  <td>0.00</td>
+							  <td>0.00</td>
+							  <td>0.00%</td>
+						  </tr>
+						  <tr>
+							  <td class="text-left">DJIA</td>
+							  <td>0.00</td>
+							  <td>0.00</td>
+							  <td>0.00%</td>
+						  </tr>
+						  <tr>
+							  <td class="text-left">FTSE</td>
+							  <td>0.00</td>
+							  <td>0.00</td>
+							  <td>0.00%</td>
+						  </tr>
+						  <tr>
+							  <td class="text-left">NIKKEI</td>
+							  <td>0.00</td>
+							  <td>0.00</td>
+							  <td>0.00%</td>
+						  </tr>
+						  <tr>
+							  <td class="text-left">SHANGHAI</td>
+							  <td>0.00</td>
+							  <td>0.00</td>
+							  <td>0.00%</td>
+						  </tr>
+					  </tbody>
+				  </table>
+			  </div>
+		  </div>
+
+		  <h3 class="mb-5 mt-5">Suggested Stocks</h3>
+		  <div class="card-deck text-center">
+			  <div class="card suggested">
+				  <div class="card-body">
+					  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
+					  <p><span class="profit">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+					  <div>
+						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
+						  <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
+					  </div>
+				  </div>
+			  </div>
+			  <div class="card suggested">
+				  <div class="card-body">
+					  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
+					  <p><span class="profit">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+					  <div>
+						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
+						  <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
+					  </div>
+				  </div>
+			  </div>
+			  <div class="card suggested">
+				  <div class="card-body">
+					  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
+					  <p><span class="profit">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+					  <div>
+						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
+						  <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
+					  </div>
+				  </div>
+			  </div>
+			  <div class="card suggested">
+				  <div class="card-body">
+					  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
+					  <p><span class="profit">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+					  <div>
+						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
+						  <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
+					  </div>
 				  </div>
 			  </div>
 		  </div>
 	  </div>
-  </header>
 
-  <section id="about">
-	  <div class="container">
-	  	<div class="row">
-	  		<h3>About This App</h3>
-	  	</div>
-		<div class="row">
-			<p class="col-md-4">Practice stock investment: Lorem ipsum dolor sit amet, mandamus consequuntur pri at, augue tollit accommodare duo at.</p>
-			<p class="col-md-4">Update in realtime: Lorem ipsum dolor sit amet, mandamus consequuntur pri at, augue tollit accommodare duo at.</p>
-			<p class="col-md-4">Lorem ipsum dolor sit amet, mandamus consequuntur pri at, augue tollit accommodare duo at.</p>
-		</div>
+	  <!-- history -->
+	  <div class="tab-pane fade" id="panel-history" role="tabpanel">
+		  <h3>Trade History</h3>
+		  <table class="table table-hover mt-5">
+			  <thead>
+				  <tr>
+					  <th>Date</th>
+					  <th>Action</th>
+					  <th>Symbol</th>
+					  <th>QTY</th>
+					  <th>Trade Price $</th>
+					  <th>Total $</th>
+				  </tr>
+			  </thead>
+			  <tbody>
+				  <tr>
+					  <td>3/19/2018</td>
+					  <td>Buy</td>
+					  <td>IBM</td>
+					  <td>20</td>
+					  <td>0.00</td>
+					  <td>0.00</td>
+				  </tr>
+				  <tr>
+					  <td>3/19/2018</td>
+					  <td>Buy</td>
+					  <td>IBM</td>
+					  <td>20</td>
+					  <td>0.00</td>
+					  <td>0.00</td>
+				  </tr>
+				  <tr>
+					  <td>3/19/2018</td>
+					  <td>Buy</td>
+					  <td>IBM</td>
+					  <td>20</td>
+					  <td>0.00</td>
+					  <td>0.00</td>
+				  </tr>
+				  <tr>
+					  <td>3/19/2018</td>
+					  <td>Buy</td>
+					  <td>IBM</td>
+					  <td>20</td>
+					  <td>0.00</td>
+					  <td>0.00</td>
+				  </tr>
+			  </tbody>
+		  </table>
 	  </div>
-  </section>
 
-  <section id="signup">
-	  <div class="container text-center">
-	  	<div class="card card-body" style="height:500px;width:60%;margin:50px auto">
-	  		<h3>Sign up module goes here</h3>
-	  	</div>
+	  <!-- trade -->
+	  <div class="tab-pane fade" id="panel-trade" role="tabpanel">
+		  <h3>Trade</h3>
+		  <form class="mt-5">
+			  <div class="form-row d-flex align-items-end">
+				  <div class="col">
+					  <label for="action" class="my-font-small">Action</label>
+					  <input type="text" class="form-control dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" name="action" placeholder="Buy/Sell">
+					  <div class="dropdown-menu col">
+						  <a class="dropdown-item" href="#">Buy</a>
+						  <a class="dropdown-item" href="#">Sell</a>
+						  <a class="dropdown-item" href="#">Something else</a>
+						  <div class="dropdown-divider"></div>
+						  <a class="dropdown-item" href="#">Separated link</a>
+					  </div>
+				  </div>
+				  <div class="col">
+					  <label for="action" class="my-font-small">Symbol</label>
+					  <input type="text" class="form-control dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" name="action" placeholder="eg. GOOG">
+					  <div class="dropdown-menu col">
+						  <a class="dropdown-item" href="#">IBM</a>
+						  <a class="dropdown-item" href="#">GOOG</a>
+						  <a class="dropdown-item" href="#">APPL</a>
+						  <a class="dropdown-item" href="#">NIK</a>
+						  <a class="dropdown-item" href="#">TGT</a>
+						  <a class="dropdown-item" href="#">BA</a>
+					  </div>
+				  </div>
+				  <div class="col">
+					  <label for="price" class="my-font-small">Price $</label>
+					  <input type="text" class="form-control" name="price" placeholder="$0.00">
+				  </div>
+				  <div class="col">
+					  <label for="qty" class="my-font-small">QTY</label>
+					  <input type="text" class="form-control" name="qty" placeholder="QTY">
+				  </div>
+				  <div class="col">
+					  <label for="total" class="my-font-small">Total</label>
+					  <input type="text" class="form-control" name="total" placeholder="$0.00">
+				  </div>
+				  <div class="col-12 mt-5">
+					  <a class="btn btn-indigo" href="#0" style="margin:0">Confirm</a>
+				  </div>
+			  </div>
+		  </form>
+	  </div>
+
+	  <!-- search -->
+	  <div class="tab-pane fade" id="panel-search" role="tabpanel">
+		  <h3>Search</h3>
+		  <form id="trade" class="mt-5">
+			  <div class="form-row d-flex align-items-end">
+				  <div class="col-4">
+					  <label for="price" class="my-font-small">Search symbol or company name</label>
+					  <input type="text" class="form-control" name="price" placeholder="eg. GOOG">
+				  </div>
+				  <div class="col-12 mt-5">
+					  <a class="btn btn-indigo" href="#0" style="margin:0">Search</a>
+				  </div>
+			  </div>
+		  </form>
 	  </div>
   </section>
 
   <!--footer-->
-  <footer class="page-footer font-small pt-4 mt-4">
+  <footer class="page-footer font-small pt-5 mt-4">
     <div class="container text-md-left">
       <div class="row">
         <div class="col-md-8">
@@ -109,7 +489,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-12 pb-4">
+        <div class="col-md-12 pb-5">
           <hr style="background-color:grey">
           <a href="https://github.com/smalldoorman/show-me-the-money">Github Repository</a>
         </div>
@@ -127,10 +507,11 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/js/mdb.min.js"></script>
   <!-- Data visualization echarts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/4.0.4/echarts-en.common.min.js"></script>
+  <!-- moment.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.21.0/moment.min.js"></script>
 
   <!-- Custom JavaScript -->
   <script src="javascript/app.js"></script>
-  <script src="javascript/bar-chart.js"></script>
-  <script src="javascript/pie-chart.js"></script>
+  <script src="javascript/chart.js"></script>
 </body>
 </html>
