--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
 	  <div class="tab-pane fade in show active" id="panel-portfolio" role="tabpanel">
 		  <h3 class="mb-5">Portfolio</h3>
 		  <div class="row mb-5">
-			  <div id="chart" class="col-8"></div>
+			  <div id="chart-stock" class="col-8"></div>
     		  <div id="portfolio" class="col-4"></div>
 		  </div>
 		  <h3 class="mb-5">My Stocks</h3>
@@ -144,168 +144,62 @@
 	  </div>
 
 	  <!-- market -->
-	  <div class="tab-pane fade" id="panel-market" role="tabpanel">
+	  <div class="tab-pane fade in show active" id="panel-market" role="tabpanel">
 		  <h3 class="mb-5">Major Index</h3>
-		  <div class="row">
-			  <div id="chart-market" class="col-md-6"><p>Market diagram</p></div>
-			  <div class="col-md-6">
-				  <table class="table table-hover text-center">
-					  <thead>
-						  <tr>
-							  <th class="text-left"></th>
-							  <th>Last</th>
-							  <th>Change</th>
-							  <th>% CHG</th>
-						  </tr>
-					  </thead>
-					  <tbody>
-						  <tr>
-							  <td class="text-left">S&P 500</td>
-							  <td>0.00</td>
-							  <td>0.00</td>
-							  <td>0.00%</td>
-						  </tr>
-						  <tr>
-							  <td class="text-left">NASDAQ</td>
-							  <td>0.00</td>
-							  <td>0.00</td>
-							  <td>0.00%</td>
-						  </tr>
-						  <tr>
-							  <td class="text-left">DJIA</td>
-							  <td>0.00</td>
-							  <td>0.00</td>
-							  <td>0.00%</td>
-						  </tr>
-						  <tr>
-							  <td class="text-left">FTSE</td>
-							  <td>0.00</td>
-							  <td>0.00</td>
-							  <td>0.00%</td>
-						  </tr>
-						  <tr>
-							  <td class="text-left">NIKKEI</td>
-							  <td>0.00</td>
-							  <td>0.00</td>
-							  <td>0.00%</td>
-						  </tr>
-						  <tr>
-							  <td class="text-left">SHANGHAI</td>
-							  <td>0.00</td>
-							  <td>0.00</td>
-							  <td>0.00%</td>
-						  </tr>
-					  </tbody>
-				  </table>
-			  </div>
-		  </div>
-		  <div class="row mt-5">
-			  <div class="col-md-6">
-				  <h3>Currencies</h3>
-				  <table class="table table-hover text-center">
-					  <thead>
-						  <tr>
-							  <th class="text-left"></th>
-							  <th>Last</th>
-							  <th>Change</th>
-							  <th>% CHG</th>
-						  </tr>
-					  </thead>
-					  <tbody>
-						  <tr>
-							  <td class="text-left">S&P 500</td>
-							  <td>0.00</td>
-							  <td>0.00</td>
-							  <td>0.00%</td>
-						  </tr>
-						  <tr>
-							  <td class="text-left">NASDAQ</td>
-							  <td>0.00</td>
-							  <td>0.00</td>
-							  <td>0.00%</td>
-						  </tr>
-						  <tr>
-							  <td class="text-left">DJIA</td>
-							  <td>0.00</td>
-							  <td>0.00</td>
-							  <td>0.00%</td>
-						  </tr>
-						  <tr>
-							  <td class="text-left">FTSE</td>
-							  <td>0.00</td>
-							  <td>0.00</td>
-							  <td>0.00%</td>
-						  </tr>
-						  <tr>
-							  <td class="text-left">NIKKEI</td>
-							  <td>0.00</td>
-							  <td>0.00</td>
-							  <td>0.00%</td>
-						  </tr>
-						  <tr>
-							  <td class="text-left">SHANGHAI</td>
-							  <td>0.00</td>
-							  <td>0.00</td>
-							  <td>0.00%</td>
-						  </tr>
-					  </tbody>
-				  </table>
-			  </div>
-			  <div class="col-md-6">
-				  <h3>Commodities</h3>
-				  <table class="table table-hover text-center">
-					  <thead>
-						  <tr>
-							  <th class="text-left"></th>
-							  <th>Last</th>
-							  <th>Change</th>
-							  <th>% CHG</th>
-						  </tr>
-					  </thead>
-					  <tbody>
-						  <tr>
-							  <td class="text-left">S&P 500</td>
-							  <td>0.00</td>
-							  <td>0.00</td>
-							  <td>0.00%</td>
-						  </tr>
-						  <tr>
-							  <td class="text-left">NASDAQ</td>
-							  <td>0.00</td>
-							  <td>0.00</td>
-							  <td>0.00%</td>
-						  </tr>
-						  <tr>
-							  <td class="text-left">DJIA</td>
-							  <td>0.00</td>
-							  <td>0.00</td>
-							  <td>0.00%</td>
-						  </tr>
-						  <tr>
-							  <td class="text-left">FTSE</td>
-							  <td>0.00</td>
-							  <td>0.00</td>
-							  <td>0.00%</td>
-						  </tr>
-						  <tr>
-							  <td class="text-left">NIKKEI</td>
-							  <td>0.00</td>
-							  <td>0.00</td>
-							  <td>0.00%</td>
-						  </tr>
-						  <tr>
-							  <td class="text-left">SHANGHAI</td>
-							  <td>0.00</td>
-							  <td>0.00</td>
-							  <td>0.00%</td>
-						  </tr>
-					  </tbody>
-				  </table>
-			  </div>
+		  <div class="row mb-5">
+			  <div id="chart-market" class="col-6"></div>
+			  <table class="col-6 table table-hover text-center">
+				  <thead>
+					  <tr>
+						  <th class="text-left"></th>
+						  <th>Last</th>
+						  <th>Change</th>
+						  <th>% CHG</th>
+					  </tr>
+				  </thead>
+				  <tbody>
+					  <tr>
+						  <td class="text-left">S&P 500</td>
+						  <td>0.00</td>
+						  <td>0.00</td>
+						  <td>0.00%</td>
+					  </tr>
+					  <tr>
+						  <td class="text-left">NASDAQ</td>
+						  <td>0.00</td>
+						  <td>0.00</td>
+						  <td>0.00%</td>
+					  </tr>
+					  <tr>
+						  <td class="text-left">DJIA</td>
+						  <td>0.00</td>
+						  <td>0.00</td>
+						  <td>0.00%</td>
+					  </tr>
+					  <tr>
+						  <td class="text-left">FTSE</td>
+						  <td>0.00</td>
+						  <td>0.00</td>
+						  <td>0.00%</td>
+					  </tr>
+					  <tr>
+						  <td class="text-left">NIKKEI</td>
+						  <td>0.00</td>
+						  <td>0.00</td>
+						  <td>0.00%</td>
+					  </tr>
+					  <tr>
+						  <td class="text-left">SHANGHAI</td>
+						  <td>0.00</td>
+						  <td>0.00</td>
+						  <td>0.00%</td>
+					  </tr>
+				  </tbody>
+			  </table>
 		  </div>
 
 		  <h3 class="mb-5 mt-5">Suggested Stocks</h3>
-		  <div class="card-deck text-center">
+		  <div class="row card-deck text-center">
 			  <div class="card suggested">
 				  <div class="card-body">
 					  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
