--- a/public/home.html
+++ b/public/home.html
@@ -16,6 +16,13 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/css/mdb.min.css" rel="stylesheet">
   <!-- custom css -->
   <link rel="stylesheet" href="styles/styles.css">
+
+  <script src = "https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+	<script src="https://code.jquery.com/jquery.js"></script>
+
+	<script src = "./utilities.js"></script>
+  <script src = "./sockets.js"></script>
+  
 </head>
 
 <body>
