--- a/public/home.html
+++ b/public/home.html
@@ -36,13 +36,13 @@
 
 				  <ul class="navbar-nav">
 					  <li class="nav-item">
-						  <a class="nav-link" href="#">Home</a>
+						  <a class="nav-link" href="/">Home</a>
 					  </li>
 					  <li class="nav-item">
-						  <a class="nav-link" href="#">My Account</a>
+						  <a class="nav-link" href="/user">My Account</a>
 					  </li>
 					  <li class="nav-item">
-						  <a class="nav-link" href="#">Logout</a>
+						  <a class="nav-link" href="/logout">Logout</a>
 					  </li>
 				  </ul>
 			  </div>
