--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <title>Stock</title>
   <link rel="shortcut icon" href="images/favicon.png">
 
-  <!-- Font Awesome -->
+  <!-- Font Awesome --->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Bootstrap core CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
