--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
 		  <table class="table table-hover text-center">
 		    <thead>
 		      <tr>
-		        <th class="text-left">Symbol<br><span class="my-font-small">Company</span></th>
+		        <th class="text-left">Symbol<br></th>
 		        <th>QTY</th>
 		        <th>Last Price $</th>
 		        <th>Price Paid $</th>
@@ -116,7 +116,7 @@
 		    </thead>
 		    <tbody>
 		      <tr>
-		        <td class="text-left">WFC<br><span class="my-font-small">Wells Fargo<span></td>
+		        <td class="text-left">WFC</td>
 		          <td>10</td>
 		          <td>0.00</td>
 		          <td>0.00</td>
@@ -124,12 +124,12 @@
 		          <td>0.00</td>
 		          <td>%</td>
 		          <td>
-		            <a class="btn btn-indigo btn-custom-small" href="#0">Chart</a>
+		            <a class="btn btn-indigo btn-custom-small btn-chart" href="#0" symbol="WFC">Chart</a>
 		            <a class="btn btn-cyan btn-custom-small" href="#0">Sell</a>
 		          </td>
 		        </tr>
 		        <tr>
-		          <td class="text-left">NKE<br><span class="my-font-small">Nike Inc.<span></td>
+		          <td class="text-left">NKE</td>
 		            <td>20</td>
 		            <td>0.00</td>
 		            <td>0.00</td>
@@ -137,7 +137,7 @@
 		            <td>0.00</td>
 		            <td>%</td>
 		            <td>
-		              <a class="btn btn-indigo btn-custom-small" href="#0">Chart</a>
+		              <a class="btn btn-indigo btn-custom-small btn-chart" href="#0" symbol="NKE">Chart</a>
 		              <a class="btn btn-cyan btn-custom-small" href="#0">Sell</a>
 		            </td>
 		        </tr>
