Dom population of websocket data in My Stocks

--- a/public/index.html
+++ b/public/index.html
@@ -118,11 +118,11 @@
 		      <tr>
 		        <td class="text-left">WFC<br><span class="my-font-small">Wells Fargo<span></td>
 		          <td>10</td>
-		          <td>0.00</td>
-		          <td>0.00</td>
-		          <td>0.00</td>
-		          <td>0.00</td>
-		          <td>%</td>
+		          <td id = "lastprice-wfc">0.00</td>
+		          <td id = "pricepaid-wfc">0.00</td>
+		          <td id = "marketvalue-wfc">0.00</td>
+		          <td id = "totalgain-wfc">0.00</td>
+		          <td id = "percentchange-wfc">%</td>
 		          <td>
 		            <a class="btn btn-indigo btn-custom-small" href="#0">Chart</a>
 		            <a class="btn btn-cyan btn-custom-small" href="#0">Sell</a>
@@ -131,11 +131,11 @@
 		        <tr>
 		          <td class="text-left">NKE<br><span class="my-font-small">Nike Inc.<span></td>
 		            <td>20</td>
-		            <td>0.00</td>
-		            <td>0.00</td>
-		            <td>0.00</td>
-		            <td>0.00</td>
-		            <td>%</td>
+		            <td id = "lastprice-nke">0.00</td>
+		            <td id = "pricepaid-nke">0.00</td>
+		            <td id = "marketvalue-nke">0.00</td>
+		            <td id = "totalgain-nke">0.00</td>
+		            <td id = "percentchange-nke">%</td>
 		            <td>
 		              <a class="btn btn-indigo btn-custom-small" href="#0">Chart</a>
 		              <a class="btn btn-cyan btn-custom-small" href="#0">Sell</a>
@@ -149,7 +149,7 @@
   			  <div class="card suggested">
   				  <div class="card-body">
   					  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
-  					  <p><span class="profit profit-fb">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+  					  <p><span class="profit profit-ibm">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
   					  <div>
   						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
   						  <a class="btn btn-cyan btn-custom-small" href="#0">Buy</a>
@@ -159,7 +159,7 @@
   			  <div class="card suggested">
   				  <div class="card-body">
   					  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/Facebook_New_Logo_%282015%29.svg/2000px-Facebook_New_Logo_%282015%29.svg.png">
-  					  <p><span class="profit profit-f">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+  					  <p><span class="profit profit-fb">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
   					  <div>
   						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
   						  <a class="btn btn-cyan btn-custom-small" href="#0">Buy</a>
@@ -179,7 +179,7 @@
   			  <div class="card suggested">
   				  <div class="card-body">
   					  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Ford_Motor_Company_Logo.svg/2000px-Ford_Motor_Company_Logo.svg.png">
-  					  <p><span class="profit profit-ibm">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+  					  <p><span class="profit profit-f">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
   					  <div>
   						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
   						  <a class="btn btn-cyan btn-custom-small" href="#0">Buy</a>
