--- a/public/index.html
+++ b/public/index.html
@@ -391,7 +391,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.21.0/moment.min.js"></script>
 
   <!-- Custom JavaScript -->
-  <script src="javascript/chart.js"></script>
-  <script src="javascript/app.js"></script>
+  <script src="js/chart.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
